bundle/tests/scorecard/kuttl/test-ephemeral-gateway/01-pods.yaml
---
apiVersion: cloud.redhat.com/v1alpha1
kind: ClowdEnvironment
metadata:
  name: test-ephemeral-gateway
spec:
  targetNamespace: test-ephemeral-gateway
  providers:
    web:
      port: 8000
      mode: local
      ingressClass: openshift
    metrics:
      port: 9000
      mode: operator
      path: "/metrics"
    kafka:
      mode: none
    db:
      mode: none
    logging:
      mode: none
    objectStore:
      mode: minio
    inMemoryDb:
      mode: none
    featureFlags:
      mode: none
  resourceDefaults:
    limits:
      cpu: 400m
      memory: 1024Mi
    requests:
      cpu: 30m
      memory: 512Mi
---
apiVersion: cloud.redhat.com/v1alpha1
kind: ClowdApp
metadata:
  name: puptoo
  namespace: test-ephemeral-gateway
spec:
  envName: test-ephemeral-gateway
  deployments:
  - name: processor
    podSpec:
      image: quay.io/psav/clowder-hello
    webServices:
      public:
        enabled: true
        apiPath: puptoo
