bundle/tests/scorecard/kuttl/test-ephemeral-gateway/01-asserts.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: env-test-ephgw-keycloak
  namespace: test-ephgw
  labels:
    app: puptoo
  ownerReferences:
  - apiVersion: cloud.redhat.com/v1alpha1
    kind: ClowdApp
    name: puptoo
type: Opaque
---
apiVersion: v1
kind: MutatingWebhookConfiguration
  metadata:
    namespace: test-ephgw
    name: clowder-mutating-webhook-configuration
