bundle/tests/scorecard/kuttl/test-ephemeral-gateway/02-json-asserts.yaml
---
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: sleep 5
- script: kubectl get secret env-test-ephgw-keycloak -n test-ephgw -o json | jq '.data | map_values(@base64d)' | jq -r -j '"\(.defaultUsername):\(.defaultPassword)" | @base64'
